# imc-prosperity

./: .gitignore  README.md  first_trader.py  key info.md  pyproject.toml  trading strategy.md
TUTORIAL_ROUND_1/: prices_round_0_day_-1.parquet  prices_round_0_day_-2.parquet
data/TUTORIAL_ROUND_1/: trades_round_0_day_-1.parquet  trades_round_0_day_-2.parquet
data/round 3/results/: 441341.json  441341.py
manual_trading/: Round 1 analysis.ipynb  Round 2 analysis.ipynb  Round 2 analysis_Vic.ipynb  Round 3 analysis.ipynb  round2_manual_trading_simulator.py  round2_speed_investment_pnl.py
output/jupyter-notebook/: informed_trader_detection.ipynb  round-1-eda.ipynb  round1-submission-result-analysis.ipynb  strategy_exploration.ipynb  tutorial-round-1-eda.ipynb
output/jupyter-notebook/ash coated osmium trading/: README.md  ash eda.ipynb  ash_backtest.ipynb  ash_backtest_diagnostics.ipynb  ash_imc_candidate_comparison.ipynb  prosperity4_technical_docs.md  requirements.txt  trader.py
output/root-trader-2-sweeps/: combined_results.csv  stage1_coarse_results.csv  stage2_targeted_results.csv  stage3_refine_results.csv
src/imc_eda/: data.py
src/imc_eda/round1/: 198985.py  (+3 more)
tmp/: build_root_1_result_notebook.py  build_round1_submission_result_notebook.py  build_round2_eda_notebook.py  build_round3_eda_notebook.py  build_strategy_notebook.py  root_trader_5.pyc.2613771542640
tmp/jupyter-config/: migrated
tmp/jupyter-notebook/: root_1_result_analysis-executed.ipynb  round-1-eda-executed.ipynb  strategy_exploration-executed.ipynb  tutorial-round-1-eda-executed.ipynb
(+134 files in other folders)
