[project]
name = "imc-prosperity-eda"
version = "0.1.0"
description = "Exploratory data analysis scaffold for IMC Prosperity tutorial data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ipykernel>=6.29.5",
  "jsonpickle>=4.1.1",
  "jupyterlab>=4.4.0",
  "matplotlib>=3.10.0",
  "numpy>=2.2.0",
  "pandas>=2.2.3",
  "plotly>=6.0.0",
  "prosperity4btx==1.0.2",
  "pyarrow>=19.0.1",
  "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imc_eda"]

[tool.uv]
package = true
